# handwritten_digit_recognition

./: .gitignore  README.md  handwritten_digit_recognition.ipynb  pyproject.toml
