[tool.poetry]
name = "handwritten-digit-recognition"
version = "0.1.0"
description = ""
authors = ["ToudertiHiba <hibatouderti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
keras = "^2.14.0"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "^2.14.0"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
